<resources>
    <string name="app_name">Notes?</string>
    <string name="we_are_glad_to_see_you_again">We are glad to see you again!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in">Sign IN</string>
    <string name="e_mail">E-mail</string>
    <string name="you_have_nt_account">You have\'nt account?</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="you_already_have_account">You already have account ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name_User" />
    <string name="name_and_surname">Name and Surname</string>
    <string name="untitled">Untitled</string>
    <string name="tap_here_to_countinue">Tap here to countinue...</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_passwords">Repeat Password</string>
    <string name="write_here_something">Write here something...</string>
</resources>